Add native EMI support, fix Sieve rows glitching in JEI